--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,8 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-# Add vsconfig
+# vsconfig
 .vsconfig
+
+# Editorconfig
+.editorconfig
